# grove

./: AGENTS.md  CONTEXT.md  Cargo.toml  README.md  VISION.md
.context/: plan.md
docs/adr/: 0001-id-backed-native-pi-changes.md  0001-path-backed-native-pi-changes.md
docs/research/: cli-state-layouts.md  herdr-evaluation.md
src/: agent.rs  change.rs  git.rs  main.rs  pi-extension.ts  runtime.rs  session.rs  shell.fish  shell.zsh
tests/: cli.rs
tests/support/: agent.sh  mod.rs  pi-extension.mjs
