[package]
name = "grove"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
clap_usage = "2"
serde = { version = "1", features = ["derive"] }
toml = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
