[package]
name = "grove"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
clap_usage = "2"
crossterm = { version = "0.29", default-features = false, features = ["events"] }
rmux-client = "=0.8.0"
rmux-proto = "=0.8.0"
rmux-server = { version = "=0.8.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "process", "rt", "time"] }
toml = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
