[package]
name = "grove"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
clap = { version = "4", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
clap_usage = "2"
crossterm = { version = "0.29", default-features = false, features = ["events"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
